--- a/package.json
+++ b/package.json
@@ -13,22 +13,35 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.0",
+    "@angular/cdk": "^5.2.5",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
+    "@angular/material": "^5.2.5",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "angular-font-awesome": "^3.1.2",
+    "bootstrap": "^4.1.0",
     "core-js": "^2.4.1",
-    "rxjs": "^5.5.6",
+    "font-awesome": "^4.7.0",
+    "google-maps-ng2": "^1.0.10",
+    "jquery": "^3.3.1",
+    "ng4-intl-phone": "^1.2.1",
+    "ngx-bootstrap": "^2.0.4",
+    "ngx-intl-tel-input": "^1.0.6",
+    "popper.js": "^1.14.3",
+    "rxjs": "^5.5.11",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
+    "@agm/core": "^1.0.0-beta.3",
     "@angular/cli": "~1.7.4",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
+    "@types/googlemaps": "^3.30.9",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
