--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 
 language: node_js
 node_js:
-  - "8.11.1""
+  - "8""
 
 branches:
   only:
@@ -11,12 +11,13 @@ branches:
 before_script:
   - npm install -g firebase-tools
   - npm install -g @angular/cli
+  - npm install
 
 script:
   - ng build --prod
 
 after_success:
-  - firebase deploy --token 1/dgkjGz5lCwRDZEgYjadz2lnllto045sS_YFTBuX_XDc
+  - firebase deploy --token $FIREBASE_TOKEN
 
 notifications:
   email:
