--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "google-maps-ng2": "^1.0.10",
     "jquery": "^3.3.1",
     "ng4-intl-phone": "^1.2.1",
+    "ng4-loading-spinner": "^1.1.3",
     "ngx-bootstrap": "^2.0.4",
     "ngx-intl-tel-input": "^1.0.6",
     "ngx-pagination": "^3.1.1",
