--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^2.1.0",
     "angular-font-awesome": "^3.1.2",
+    "angular4-carousel": "^3.1.8",
     "bootstrap": "^4.1.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
@@ -33,9 +35,11 @@
     "ng4-loading-spinner": "^1.1.3",
     "ngx-bootstrap": "^2.0.4",
     "ngx-intl-tel-input": "^1.0.6",
+    "ngx-owl-carousel": "^2.0.7",
     "ngx-pagination": "^3.1.1",
     "popper.js": "^1.14.3",
     "rxjs": "^5.5.11",
+    "ui-carousel": "^0.2.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
