--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
+    "angular-calendar": "^0.24.1",
     "angular-font-awesome": "^3.1.2",
     "angular4-carousel": "^3.1.8",
     "bootstrap": "^4.1.0",
     "core-js": "^2.4.1",
+    "date-fns": "^1.29.0",
     "font-awesome": "^4.7.0",
     "google-maps-ng2": "^1.0.10",
     "jquery": "^3.3.1",
