--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "ngx-intl-tel-input": "^1.0.6",
     "ngx-owl-carousel": "^2.0.7",
     "ngx-pagination": "^3.1.1",
+    "ngx-smart-modal": "^6.0.3",
     "popper.js": "^1.14.3",
     "rxjs": "^5.5.11",
     "ui-carousel": "^0.2.0",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
