--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "^4.1.0",
     "core-js": "^2.4.1",
     "date-fns": "^1.29.0",
+    "file-saver": "^1.3.8",
     "font-awesome": "^4.7.0",
     "google-maps-ng2": "^1.0.10",
     "jquery": "^3.3.1",
@@ -39,6 +40,7 @@
     "ngx-intl-tel-input": "^1.0.6",
     "ngx-owl-carousel": "^2.0.7",
     "ngx-pagination": "^3.1.1",
+    "ngx-rating": "0.0.9",
     "ngx-smart-modal": "^6.0.3",
     "popper.js": "^1.14.3",
     "rxjs": "^5.5.11",
@@ -51,6 +53,7 @@
     "@angular/cli": "~1.7.4",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
+    "@types/file-saver": "^1.3.0",
     "@types/googlemaps": "^3.30.9",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
