--- a/package.json
+++ b/package.json
@@ -24,16 +24,20 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
+    "@swimlane/ngx-charts": "^9.0.0",
     "angular-calendar": "^0.24.1",
     "angular-font-awesome": "^3.1.2",
     "angular4-carousel": "^3.1.8",
     "bootstrap": "^4.1.0",
+    "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
     "date-fns": "^1.29.0",
     "file-saver": "^1.3.8",
     "font-awesome": "^4.7.0",
     "google-maps-ng2": "^1.0.10",
     "jquery": "^3.3.1",
+    "ng-snotify": "^4.3.1",
+    "ng2-charts": "^1.6.0",
     "ng4-intl-phone": "^1.2.1",
     "ng4-loading-spinner": "^1.1.3",
     "ngx-bootstrap": "^2.0.4",
